# trade-tree

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 002_v_top5_products_last_30_days.py  071a14faa557_fix_add_product_price.py  0b2ccef1b8a7_added_indexes_orderitems_and_order.py  3d68d3a6470d_added_index_idx_product_category_id_.py  559dd66ff3f6_add_v_top5_products_last_30_days_view.py  b5367cd742f1_init.py
app/: __init__.py  db.py  main.py  models.py  settings.py  views.py
app/api/: router.py
app/api/catalog/: __init__.py  categories.py  orders.py  schemas.py  top_products.py
app/repositories/: catalog.py
docs/db/: schema.sql
